build: upgrade to JDK 26 + Gradle 9.6 + Lombok 1.18.40